# creait

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPERS.md  FindCreait.cmake  README.md
.github/workflows/: ci.yaml
CMake/: Dependencies.cmake
Include/Reai/: AnalysisInfo.h  AnnFnMatch.h  Api.h  ApiError.h  CollectionBasicInfo.h  CollectionInfo.h  CollectionSearchResult.h  Common.h  Config.h  Db.h  Diff.h  File.h  FnInfo.h  Log.h  QueryResult.h  Sys.h  Types.h
Include/Reai/Api/: Api.h  Reai.h  Request.h  Response.h  Types.h
Include/Reai/Api/Types/: AiDecompFnMap.h  AiDecompilation.h  AnalysisInfo.h  AnnFnMatch.h  AnnSymbol.h  BinaryInfo.h  BinarySearchResult.h  CollectionBasicInfo.h  CollectionInfo.h  CollectionSearchResult.h  Comment.h  Common.h  ControlFlowGraph.h  DataType.h  Error.h  FunctionInfo.h  ModelInfo.h  QueryResult.h  SimilarFn.h  SimilarFunction.h  Status.h  SymbolInfo.h
Include/Reai/SQLite3/: sqlite3.h
Include/Reai/Util/: AnalysisInfo.h  CStrVec.h  FnInfo.h  IntVec.h  Json.h  Log.h  QueryResult.h  Str.h  Vec.h
Scripts/: Build.sh  Install.sh
Source/: CMakeLists.txt  Main.c
Source/Reai/: AnalysisInfo.c  AnnFnMatch.c  Api.c  ApiError.c  BinarySearchResult.c  CMakeLists.txt  CollectionBasicInfo.c  CollectionInfo.c  CollectionSearchResult.c  Config.c  Db.c  Diff.c  File.c  FnInfo.c  Log.c  QueryResult.c  SimilarFn.c  Sys.c
Source/Reai/Api/: Reai.c  Request.c  Response.c
Source/Reai/Api/Helpers/: JsonGetters.h
Source/Reai/Api/Types/: AiDecompFnMap.c  AiDecompilation.c  AnalysisInfo.c  AnnFnMatch.c  AnnSymbol.c  ApiError.c  BinaryInfo.c  BinarySearchResult.c  CollectionBasicInfo.c  CollectionInfo.c  CollectionSearchResult.c  Comment.c  ControlFlowGraph.c  DataType.c  Error.c  FnInfo.c  FunctionInfo.c  ModelInfo.c  QueryResult.c  SimilarFn.c  SimilarFunction.c  Status.c  SymbolInfo.c
Source/Reai/Util/: AnalysisInfo.c  Json.c  Log.c  Str.c  Vec.c
Test/: CMakeLists.txt  MockApi.c  Test.c
